--- a/CoreLaunching/CoreLaunching.Console/CoreLaunching.Console.csproj
+++ b/CoreLaunching/CoreLaunching.Console/CoreLaunching.Console.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>..\Output</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\CoreLaunching\CoreLaunching.csproj" />
   </ItemGroup>
