--- a/CoreLaunching/FrameworkLaunching/FrameworkLaunching.csproj
+++ b/CoreLaunching/FrameworkLaunching/FrameworkLaunching.csproj
@@ -34,20 +34,23 @@
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.13.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomVersionReader.cs" />
     <Compile Include="DirectorySystem.cs" />
+    <Compile Include="Downloader.cs" />
+    <Compile Include="Launcher.cs" />
+    <Compile Include="MultiThreadDownloader.cs" />
+    <Compile Include="ObjectTemples\libInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
