--- a/CoreLaunching/CoreLaunching/CoreLaunching - Backup.csproj
+++ b/CoreLaunching/CoreLaunching/CoreLaunching - Backup.csproj
@@ -2,9 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <AssemblyVersion></AssemblyVersion>
+    <AssemblyVersion>0.0.0.7</AssemblyVersion>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
-    <Version>0.0.7</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
