搞了一个还算不错的新的高速下载方案（

--- a/CoreLaunching/CoreLaunching/CoreLaunching.csproj
+++ b/CoreLaunching/CoreLaunching/CoreLaunching.csproj
@@ -4,7 +4,9 @@
     <TargetFramework>net6.0</TargetFramework>
     <AssemblyVersion></AssemblyVersion>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
-    <Version>0.7.1</Version>
+    <Version>0.7.2</Version>
+    <Authors>FanaticGene</Authors>
+    <PackageIcon>NuGetLogo.png</PackageIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -13,6 +15,10 @@
 
   <ItemGroup>
     <None Include="..\..\.editorconfig" Link=".editorconfig" />
+    <None Include="..\..\NuGetLogo.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
