--- a/CoreLaunchingNet6/CoreLaunchingNet6.csproj
+++ b/CoreLaunchingNet6/CoreLaunchingNet6.csproj
@@ -5,9 +5,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	  <Version>0.0.0</Version>
+	  <PackageIcon>CoreLaunching_NuGet_Logo.png</PackageIcon>
   </PropertyGroup>
 
   <Import Project="..\SharedCore\SharedCore.projitems" Label="Shared" />
+
+  <ItemGroup>
+    <None Include="C:\Users\Lenovo\Desktop\CoreLaunching_NuGet_Logo.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
