--- a/CoreLaunchingNet6/CoreLaunchingNet6.csproj
+++ b/CoreLaunchingNet6/CoreLaunchingNet6.csproj
@@ -4,22 +4,22 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	  <Version>0.0.0</Version>
-	  <PackageIcon>CoreLaunching_NuGet_Logo.png</PackageIcon>
+	  <Version>1.0.0</Version>
+	  <PackageIcon>NuIcon.png</PackageIcon>
   </PropertyGroup>
 
   <Import Project="..\SharedCore\SharedCore.projitems" Label="Shared" />
 
   <ItemGroup>
-    <None Include="C:\Users\Lenovo\Desktop\CoreLaunching_NuGet_Logo.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
+    <None Update="NuIcon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
