--- a/CoreLaunchingFw452/CoreLaunchingFw452/CoreLaunchingNetFw452.csproj
+++ b/CoreLaunchingFw452/CoreLaunchingFw452/CoreLaunchingNetFw452.csproj
@@ -2,6 +2,7 @@
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
+    <LangVersion>10</LangVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A98F00B4-191B-4401-B986-B3E8A5F10605}</ProjectGuid>
