--- a/CoreLaunchingNet6/CoreLaunchingNet6.csproj
+++ b/CoreLaunchingNet6/CoreLaunchingNet6.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿    <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,11 +6,13 @@
     <Nullable>enable</Nullable>
 	  <Version>1.0.0</Version>
 	  <PackageIcon>NuIcon.png</PackageIcon>
+	  <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <Import Project="..\SharedCore\SharedCore.projitems" Label="Shared" />
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
   </ItemGroup>
